llvm/test/tools/llubi/inttoptr_freed.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

target datalayout = "e-p:64:64:64"

define void @main() {
  %alloc = call ptr @malloc(i64 4)
  %int = ptrtoint ptr %alloc to i64
  %ptr = inttoptr i64 %int to ptr

  store i32 0, ptr %ptr
  call void @free(ptr %ptr)

  ; We cannot access a freed object via wildcard provenance.
  store i32 0, ptr %ptr

  ret void
}

declare ptr @malloc(i64)
declare void @free(ptr)
; CHECK: Entering function: main
; CHECK-NEXT:   %alloc = call ptr @malloc(i64 4) => ptr 0x10 [alloc]
; CHECK-NEXT:   %int = ptrtoint ptr %alloc to i64 => i64 16
; CHECK-NEXT:   %ptr = inttoptr i64 %int to ptr => ptr 0x10 [wildcard]
; CHECK-NEXT:   store i32 0, ptr %ptr, align 4
; CHECK-NEXT:   call void @free(ptr %ptr)
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   store i32 0, ptr %ptr, align 4 at @main <stdin>:15
; CHECK-NEXT: Immediate UB detected: Invalid memory access via a pointer with nullary provenance.
; CHECK-NEXT: error: Execution of function 'main' failed.
